@@ -9,7 +9,7 @@ Introduction
 
 This documentation consists of some HOW TO documentation and some
 reference documentation.  In addition, there are some more formal
-published papers available from the `Gamera website`__.
+published papers and a tutorial available from the `Gamera website`__.
 
 .. __: http://gamera.informatik.hsnr.de/
 
@@ -23,6 +23,8 @@ Overview
 
 How To
 ======
+
+How to *use* Gamera:
 
 - `Building and installing Gamera`__: The basics to get you started
   with running Gamera.
@@ -39,28 +41,6 @@ How To
 
 .. __: script.html
 
-- `Writing Gamera plugins`__: Learn how to write new image methods.
-
-.. __: writing_plugins.html
-
-   - `Specifying arguments for plugin generation and dialog boxes`__
-
-   .. __: args.html
-
-   - `The Gamera C++ Image API`__: How to work with Gamera's images from C++.
-
-   .. __: image_api.html
-
-   - `Custom data types in plugins`__: How to pass, access and return
-     custom data types between C++ and Python.
-
-   .. __: plugins_custom_types.html
-
-   - `Writing Gamera toolkits`__: How to package your code in a
-     redistributable package that is easier to build. 
-
-   .. __: writing_toolkits.html
-
 - `The Gamera GUI`__: How to use the integrated GUI.  Additionally,
   this describes how to train images.
 
@@ -74,6 +54,31 @@ How To
 - `Classifier API`__: How to use image classifiers from Python.
 
 .. __: classify.html
+
+How to *extend* Gamera:
+
+- `Writing Gamera plugins`__: Learn how to write new image methods.
+
+.. __: writing_plugins.html
+
+- `Specifying arguments for plugin generation and dialog boxes`__
+
+.. __: args.html
+
+- `The Gamera C++ Image API`__: How to work with Gamera's images from C++.
+
+.. __: image_api.html
+
+- `Custom data types in plugins`__: How to pass, access and return
+  custom data types between C++ and Python.
+
+.. __: plugins_custom_types.html
+
+- `Writing Gamera toolkits`__: How to package your code in a
+  redistributable package that is easier to build and lets you keep
+  your own code separate from the Gamera core.
+
+.. __: writing_toolkits.html
 
 - `Unit testing`__: How to write and run unit-tests with Gamera.
 
@@ -106,6 +111,12 @@ Reference
 
 .. __: gamera.core.ImageInfo.html
 
+- `XML format`__: The XML files that Gamera uses to store training data.
+
+.. __: xml_format.html
+
+Optional libraries that can be useful for some tasks:
+
 - `Graph objects`__: A simple library for dealing with graph
   structures.
 
@@ -115,10 +126,6 @@ Reference
   dimensional search operations.
 
 .. __: kdtree.html
-
-- `XML format`__: The XML files that Gamera uses to store training data.
-
-.. __: xml_format.html
 
 
 Migration from Gamera 2.x to Gamera 3.x
